# capp-gpt-serve

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  benchmark_api.py  benchmark_examples.md  convert_to_onnx.py  docker-compose.yml  pyproject.toml  test_api.py  validation_results.json
.github/workflows/: ci.yml
frontend/: README.md  index.html  script.js  style.css
model/: config.json  generation_config.json  info.txt  model.onnx  model.safetensors  token_mappings.json
scripts/: __init__.py  benchmark_api.py  test_validation.py
src/capp_gpt_serve/: __init__.py  explainability_service.py  main.py  model_service.py  schemas.py  token_processor.py
src/capp_gpt_serve/data/: part_encoding_and_process_list.json
src/scripts/: __init__.py  benchmark_api.py  test_api.py  test_validation.py
