[project]
name = "capp-gpt-serve"
version = "0.1.0"
description = "HTTP API for GPT-2 based manufacturing process planning model"
authors = [
    { name = "Helge Spieker", email = "info@hspieker.de" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "pydantic>=2.0.0",
    "safetensors>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.25.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
serve = "capp_gpt_serve.main:cli"

[tool.uv]
index-url = "https://download.pytorch.org/whl/cpu"
extra-index-url = ["https://pypi.org/simple"]
dev-dependencies = [
    "pytest>=7.0.0",
    "httpx>=0.25.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/capp_gpt_serve"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
